# remora

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  container.nix  flake.nix  flake.nix.gts  flake.nix.orig  remora-interpreter.cabal  remora-lang.cabal  remora-lang.project  remora.cabal
.github/workflows/: main.yml
docs/: conf.py  index.rst  language.rst  sexp.rst
examples/: basic0.remora  basic2.remora  basic3.remora  basic4.remora  box0.remora  darknet_conv.remora  darknet_conv_monomorph.remora  nbody.remora
examples/darknet_conv_layers/: yolov4_layers.txt
examples/darknet_conv_layers/layers/: conv2d_monomorph_0.remora  conv2d_monomorph_10.remora  conv2d_monomorph_100.remora  conv2d_monomorph_102.remora  conv2d_monomorph_117.remora  conv2d_monomorph_122.remora  conv2d_monomorph_125.remora  conv2d_monomorph_127.remora  conv2d_monomorph_133.remora  conv2d_monomorph_134.remora  conv2d_monomorph_138.remora  conv2d_monomorph_14.remora  conv2d_monomorph_147.remora  conv2d_monomorph_149.remora  conv2d_monomorph_15.remora  conv2d_monomorph_16.remora  conv2d_monomorph_19.remora  conv2d_monomorph_2.remora  conv2d_monomorph_23.remora  conv2d_monomorph_27.remora  conv2d_monomorph_35.remora  conv2d_monomorph_38.remora  conv2d_monomorph_40.remora  conv2d_monomorph_46.remora  conv2d_monomorph_5.remora  conv2d_monomorph_54.remora  conv2d_monomorph_6.remora  conv2d_monomorph_69.remora  conv2d_monomorph_77.remora  conv2d_monomorph_8.remora  conv2d_monomorph_83.remora  conv2d_monomorph_85.remora  conv2d_monomorph_91.remora  conv2d_monomorph_99.remora
examples/extras/: README.html  README.md  convolution-1d.remora  fft-fixed.remora  life.remora  matmult.remora  row-col-sums.remora  rule30.remora
src/: Binds.hs  CLI.hs  Free.hs  Futhark.hs  ISpace.hs  Imports.hs  Interpreter.hs  Intrinsics.hs  LambdaLift.hs  LiftLambdas.hs  Monomorphize.hs  Parser.hs  Pass.hs  Pipeline.hs  Primitive.hs  Prop.hs  REPL.hs  Reason.hs  RemoraPrelude.hs  RemoraPrelude.hs-boot  SExp.hs  Serializer.hs  Shape.hs  Substitute.hs  SymTable.hs  Symbolic.hs  Syntax.hs  TypeCheck.hs  Uniquify.hs  Util.hs  VName.hs
src/CLI/: REPL.hs
src/Interpreter/: Intrinsics.hs  Value.hs
src/LambdaLift/: Monad.hs
src/LiftLambdas/: Monad.hs
src/MLIR/: EmitMLIR.hs  MLIR.hs  README.md  example.mlir  remora-dialect.td  testEmitMLIR.hs
src/Monomorphize/: Monad.hs
src/TypeCheck/: Monad.hs
src/Uniquify/: Monad.hs  Type.hs
test/: Main.hs
tests/: accel.remora  basic0.remora  basic1.remora  basic2.remora  basic3.remora  basic4.remora  basic5.remora  box0.remora  def0.remora  dot0.remora  dotlib.remora  flatten0.remora  head0.remora  head1.remora  head2.remora  idxs-of.remora  import0.remora  index0.remora  iota0.remora  iota1.remora  lambdalift0.remora  lambdalift1.remora  lambdalift2.remora  lambdalift3.remora  lambdalift4.remora  let0.remora  let1.remora  let2.remora  let3.remora  let4.remora  let5.remora  mono0.remora  mono1.remora  mono2.remora  mono3.remora  mono4.remora  mono5.remora  noarg0.remora  reduce0.remora  reduce1.remora  (+11 more)
tutorial/: remora-tutorial-2.README  remora-tutorial-2.md
