cabal-version:      3.0
name:               remora-interpreter
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             zfnmxt
maintainer:         zfnmxt@zfnmxt.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    ghc-options: -Wall
    default-extensions:
      OverloadedStrings
    default-language: GHC2021

library
    import:           common
    exposed-modules:
      Syntax
      Parser
    -- other-modules:
    -- other-extensions:
    build-depends:
      base ^>=4.19.2.0,
      megaparsec,
      text,
      prettyprinter

    hs-source-dirs:   src

executable remora-interpreter
    import:           common
    main-is:          src/Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.2.0,
        remora-interpreter

test-suite remora-interpreter-test
    import:           common
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.2.0,
        remora-interpreter
