cabal-version:      3.0
name:               remora-lang
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             zfnmxt
maintainer:         zfnmxt@zfnmxt.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    ghc-options: -Wall
    default-extensions:
      OverloadedStrings
    default-language: GHC2021

library
    import:           common
    exposed-modules:
      Syntax
      Shape
      Parser
      Interpreter
      Interpreter.Value
      TypeCheck
      VName
      SymTable
      Prop
      Util
      CLI
      CLI.REPL
      RemoraPrelude
      Substitute
      Symbolic
      Free
      Reason
    -- other-modules:
    -- other-extensions:
    build-depends:
      base ^>=4.19.2.0,
      megaparsec,
      text,
      prettyprinter,
      mtl,
      containers,
      transformers,
      cmdargs,
      haskeline,
      sbv ^>= 12.2

    hs-source-dirs:   src

executable remora
    import:           common
    main-is:          src/Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.2.0,
        cmdargs,
        haskeline,
        remora-lang

test-suite remora-lang-test
    import:           common
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.2.0,
        remora-lang
