cabal-version:      3.0
name:               remora
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             zfnmxt
maintainer:         zfnmxt@zfnmxt.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    ghc-options: -Wall -j
    default-extensions:
      OverloadedStrings
    default-language: GHC2021

library
    import:           common
    exposed-modules:
      CLI
      CLI.REPL
      Futhark
      Interpreter
      Interpreter.Intrinsics
      Interpreter.Value
      Intrinsics
      ISpace
      Monomorphize
      Monomorphize.Monad
      Parser
      Pass
      Pipeline
      Primitive
      Prop
      Substitute
      Symbolic
      Syntax
      TypeCheck
      TypeCheck.Monad
      Uniquify
      Uniquify.Monad
      Uniquify.Type
      Util
      VName

    -- other-modules:
    -- other-extensions:
    build-depends:
      base >=4.19.2.0,
      megaparsec,
      text,
      prettyprinter,
      mtl,
      containers,
      transformers,
      cmdargs,
      haskeline,
      process,
      filepath,
      sbv >= 14,
      futhark

    hs-source-dirs:   src

executable remora
    import:           common
    main-is:          src/Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.19.2.0,
        cmdargs,
        haskeline,
        remora

test-suite remora-test
    import:           common
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.19.2.0,
        remora,
        text,
        directory,
        filepath,
        tasty,
        tasty-hunit
